--- a/Fine_tuning.ipynb
+++ b/Fine_tuning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/Fine_tuning.ipynb",
-      "authorship_tag": "ABX9TyM/KW8NzAGJyZPQaOHvNAR9",
+      "authorship_tag": "ABX9TyMzZvZbtxoFKytsyPuch/88",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,37 +33,10 @@
         "!pip install openai"
       ],
       "metadata": {
-        "id": "sS1jLlO24N21",
-        "outputId": "06eafee7-dd5c-4923-d800-c4bbb1c33ac1",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "sS1jLlO24N21"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: openai in /usr/local/lib/python3.10/dist-packages (1.52.2)\n",
-            "Requirement already satisfied: anyio<5,>=3.5.0 in /usr/local/lib/python3.10/dist-packages (from openai) (3.7.1)\n",
-            "Requirement already satisfied: distro<2,>=1.7.0 in /usr/local/lib/python3.10/dist-packages (from openai) (1.9.0)\n",
-            "Requirement already satisfied: httpx<1,>=0.23.0 in /usr/local/lib/python3.10/dist-packages (from openai) (0.27.2)\n",
-            "Requirement already satisfied: jiter<1,>=0.4.0 in /usr/local/lib/python3.10/dist-packages (from openai) (0.6.1)\n",
-            "Requirement already satisfied: pydantic<3,>=1.9.0 in /usr/local/lib/python3.10/dist-packages (from openai) (2.9.2)\n",
-            "Requirement already satisfied: sniffio in /usr/local/lib/python3.10/dist-packages (from openai) (1.3.1)\n",
-            "Requirement already satisfied: tqdm>4 in /usr/local/lib/python3.10/dist-packages (from openai) (4.66.5)\n",
-            "Requirement already satisfied: typing-extensions<5,>=4.11 in /usr/local/lib/python3.10/dist-packages (from openai) (4.12.2)\n",
-            "Requirement already satisfied: idna>=2.8 in /usr/local/lib/python3.10/dist-packages (from anyio<5,>=3.5.0->openai) (3.10)\n",
-            "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio<5,>=3.5.0->openai) (1.2.2)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->openai) (2024.8.30)\n",
-            "Requirement already satisfied: httpcore==1.* in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->openai) (1.0.6)\n",
-            "Requirement already satisfied: h11<0.15,>=0.13 in /usr/local/lib/python3.10/dist-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)\n",
-            "Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (0.7.0)\n",
-            "Requirement already satisfied: pydantic-core==2.23.4 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (2.23.4)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -391,7 +364,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -440,40 +413,34 @@
         "# Excel dosyasını yükleyin\n",
         "df = pd.read_excel('/content/drive/MyDrive/Fine-tune/General_Dataset.xlsx', engine='openpyxl')\n",
         "\n",
-        "# Dosyada en az 1000 satır olduğundan emin olun\n",
-        "if len(df) < 1000:\n",
-        "    print(\"Dosyada en az 1000 satır bulunmalıdır.\")\n",
+        "# Dosyada en az 42281 satır olduğundan emin olun\n",
+        "if len(df) > 42280:\n",
+        "    print(\"Dosyada en az 42281 satır bulunmalıdır.\")\n",
         "else:\n",
-        "    # İlk 1000 satır içerisinden rastgele 400 farklı satır seçin\n",
-        "    random_rows = df.iloc[10000:12000].sample(n=1000, random_state=42, replace=False)\n",
+        "    # 12.000 ile 42281 satırlar arasındaki verileri seçin\n",
+        "    df_to_translate = df.iloc[16000:42281].copy()\n",
         "\n",
-        "    # 'instruction', 'input' ve 'output' sütunlarını çevirin\n",
-        "    for column in ['instruction', 'input', 'output']:\n",
-        "        random_rows[column] = random_rows[column].apply(translate_text)\n",
-        "        time.sleep(1)  # API hız limitlerini aşmamak için bekleyin\n",
+        "    output_file = 'cevrilmis_dosya.xlsx'\n",
         "\n",
-        "    # Sonuçları yeni bir Excel dosyasına kaydedin\n",
-        "    random_rows.to_excel('cevrilmis_dosya.xlsx', index=False, engine='openpyxl')\n",
+        "    # Her satırı işleyin\n",
+        "    for idx in df_to_translate.index:\n",
+        "        print(f\"{idx}. satır çevriliyor...\")\n",
+        "        for column in ['instruction', 'input', 'output']:\n",
+        "            df_to_translate.at[idx, column] = translate_text(df_to_translate.at[idx, column])\n",
+        "            time.sleep(1)  # API hız limitlerini aşmamak için bekleyin\n",
+        "\n",
+        "            # İşlenen satıra kadar olan verileri dosyaya kaydedin\n",
+        "            pos = df_to_translate.index.get_loc(idx)\n",
+        "            df_to_translate.iloc[:pos+1].to_excel(output_file, index=False, engine='openpyxl')\n",
+        "\n",
         "\n",
         "    print(\"Çeviri işlemi tamamlandı ve yeni dosya kaydedildi.\")\n"
       ],
       "metadata": {
-        "id": "Lu_j__n9fgNj",
-        "outputId": "eaca1e74-44b8-480f-ce68-dbac7a9132ee",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Lu_j__n9fgNj"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Çeviri işlemi tamamlandı ve yeni dosya kaydedildi.\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
