--- a/Fine_tuning.ipynb
+++ b/Fine_tuning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/Fine_tuning.ipynb",
-      "authorship_tag": "ABX9TyMzZvZbtxoFKytsyPuch/88",
+      "authorship_tag": "ABX9TyPUsCo1U48IJebLqE3jHmE8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -417,8 +417,8 @@
         "if len(df) > 42280:\n",
         "    print(\"Dosyada en az 42281 satır bulunmalıdır.\")\n",
         "else:\n",
-        "    # 12.000 ile 42281 satırlar arasındaki verileri seçin\n",
-        "    df_to_translate = df.iloc[16000:42281].copy()\n",
+        "    # Önemlidir!\n",
+        "    df_to_translate = df.iloc[20108:42281].copy()\n",
         "\n",
         "    output_file = 'cevrilmis_dosya.xlsx'\n",
         "\n",
