--- a/Llama_3_1_8b_+_Unsloth_2x_faster_finetuning.ipynb
+++ b/Llama_3_1_8b_+_Unsloth_2x_faster_finetuning.ipynb
@@ -34,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "2eSvM9zX_2d3"
       },
@@ -72,7 +72,7 @@
         "import torch\n",
         "max_seq_length = 2048 # Choose any! We auto support RoPE Scaling internally!\n",
         "dtype = None # None for auto detection. Float16 for Tesla T4, V100, Bfloat16 for Ampere+\n",
-        "load_in_4bit = True # Use 4bit quantization to reduce memory usage. Can be False.\n",
+        "load_in_4bit = False # Use 4bit quantization to reduce memory usage. Can be False.\n",
         "\n",
         "# 4bit pre quantized models we support for 4x faster downloading + no OOMs.\n",
         "fourbit_models = [\n",
@@ -91,7 +91,7 @@
         "] # More models at https://huggingface.co/unsloth\n",
         "\n",
         "model, tokenizer = FastLanguageModel.from_pretrained(\n",
-        "    model_name = \"unsloth/Llama-3.2-1B-Instruct\",\n",
+        "    model_name = \"unsloth/Meta-Llama-3.1-8B-Instruct\",\n",
         "    max_seq_length = max_seq_length,\n",
         "    dtype = dtype,\n",
         "    load_in_4bit = load_in_4bit,\n",
@@ -133,6 +133,18 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "HlHqMTbCGCcS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "vITh0KVJ10qX"
@@ -163,20 +175,25 @@
         "import pandas as pd\n",
         "from datasets import Dataset\n",
         "\n",
-        "# CSV dosyasının yolu\n",
-        "csv_path = \"/content/deneme.xlsx\"\n",
+        "# Excel dosyasını okurken encoding parametresini belirtin\n",
+        "df = pd.read_excel(\n",
+        "    csv_path,\n",
+        "    engine='openpyxl'\n",
+        ")\n",
         "\n",
-        "# Pandas ile Excel dosyasını yükleyin\n",
-        "df = pd.read_excel(csv_path, engine='openpyxl') # Use read_excel for .xlsx files\n",
+        "# Karakter temizleme işlemini kaldırın veya değiştirin\n",
+        "# Bu satırı kaldırın çünkü Türkçe karakterleri siliyor:\n",
+        "# df = df.replace(r'[^\\x00-\\x7F]+', '?', regex=True)\n",
         "\n",
-        "# Karakter temizleme işlemi (hatalı karakterleri '?' ile değiştirme)\n",
-        "df = df.applymap(lambda x: x if isinstance(x, str) else str(x))  # Tüm hücreleri string'e çevir\n",
-        "df = df.replace(r'[^\\x00-\\x7F]+', '?', regex=True)  # Hatalı karakterleri '?' ile değiştir\n",
+        "# Sadece geçersiz karakterleri temizlemek için daha spesifik bir regex kullanın\n",
+        "df = df.applymap(lambda x: x if isinstance(x, str) else str(x))\n",
+        "# Sadece gerçekten problemli karakterleri temizleyin, Türkçe karakterlere dokunmayın\n",
+        "df = df.replace(r'[\\x00-\\x08\\x0B\\x0C\\x0E-\\x1F\\x7F]', '', regex=True)\n",
         "\n",
-        "# Gerekli sütunların olduğundan emin olun (instruction, input, output)\n",
-        "df = df[['instruction', 'input', 'output']]  # Sadece gerekli sütunlar\n",
+        "# Gerekli sütunları seçin\n",
+        "df = df[['instruction', 'input', 'output']]\n",
         "\n",
-        "# Pandas veri çerçevesini Hugging Face Dataset'e çevirin\n",
+        "# Dataset'e çevirin\n",
         "dataset = Dataset.from_pandas(df)\n",
         "\n",
         "# Prompt formatlama işlemi\n",
@@ -191,15 +208,12 @@
         "### Response:\n",
         "{}\"\"\"\n",
         "\n",
-        "EOS_TOKEN = tokenizer.eos_token  # Must add EOS_TOKEN\n",
-        "\n",
         "def formatting_prompts_func(examples):\n",
         "    instructions = examples[\"instruction\"]\n",
         "    inputs = examples[\"input\"]\n",
         "    outputs = examples[\"output\"]\n",
         "    texts = []\n",
         "    for instruction, input, output in zip(instructions, inputs, outputs):\n",
-        "        # Must add EOS_TOKEN, otherwise your generation will go on forever!\n",
         "        text = alpaca_prompt.format(instruction, input, output) + EOS_TOKEN\n",
         "        texts.append(text)\n",
         "    return {\"text\": texts}\n",
@@ -207,13 +221,36 @@
         "# Map işlemini uygulayın\n",
         "dataset = dataset.map(formatting_prompts_func, batched=True)\n",
         "\n",
-        "# Artık dataset Hugging Face Dataset formatında ve düzenlenmiş durumda.\n",
-        "\n",
-        "\n",
-        "# Dataset'in ilk 5 satırını görmek için\n",
-        "df_dataset = dataset.to_pandas()  # Dataset'i pandas DataFrame'e dönüştür\n",
-        "print(df_dataset.head())  # İlk 5 satırı yazdır\n"
+        "# Kontrol için yazdırma\n",
+        "df_dataset = dataset.to_pandas()\n",
+        "print(df_dataset.head())"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Dosyanın içeriğini kontrol etmek için\n"
+      ],
+      "metadata": {
+        "id": "-a8DGXR5eLNg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"İlk birkaç satır:\")\n",
+        "print(df[['instruction', 'input', 'output']].head())\n",
+        "print(\"\\nKarakter encoding'i kontrol:\")\n",
+        "for col in ['instruction', 'input', 'output']:\n",
+        "    print(f\"\\n{col} sütunundaki benzersiz karakterler:\")\n",
+        "    unique_chars = set(''.join(df[col].astype(str).values))\n",
+        "    print(''.join(sorted(unique_chars)))"
+      ],
+      "metadata": {
+        "id": "MhVvwVZ0eJV3"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -293,6 +330,37 @@
       "source": [
         "trainer_stats = trainer.train()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Model kaydetme işlemi - full model olarak kaydet"
+      ],
+      "metadata": {
+        "id": "sNfvmzqDRED0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Doğrudan HuggingFace'e push etme\n",
+        "model.push_to_hub(\n",
+        "    \"kmk4444/Meta-Llama-3.1-8B-Instruct_syseng_v2\",\n",
+        "    token=\"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\",\n",
+        "    save_full_model=True,  # Full model'i kaydet\n",
+        "    max_shard_size=\"1GB\",  # Büyük dosyaları parçala\n",
+        ")\n",
+        "\n",
+        "tokenizer.push_to_hub(\n",
+        "    \"kmk4444/Meta-Llama-3.1-8B-Instruct_syseng_v2\",\n",
+        "    token=\"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\"\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "cSNtY1n4RDPr"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -453,8 +521,8 @@
       "source": [
         "#model.save_pretrained(\"lora_model\") # Local saving\n",
         "#tokenizer.save_pretrained(\"lora_model\")\n",
-        "model.push_to_hub(\"kmk4444/Llama-3.2-1B-Instruct_fine_sis\", token = \"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\") # Online saving\n",
-        "tokenizer.push_to_hub(\"kmk4444/Llama-3.2-1B-Instruct_fine_sis\", token = \"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\") # Online saving"
+        "model.push_to_hub(\"kmk4444/Meta-Llama-3.1-8B-Instruct_syseng_v1\", token = \"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\") # Online saving\n",
+        "tokenizer.push_to_hub(\"kmk4444/Meta-Llama-3.1-8B-Instruct_syseng_v1\", token = \"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\") # Online saving"
       ]
     },
     {
@@ -511,31 +579,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "yFfaXG0WsQuE",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "collapsed": true,
-        "outputId": "b3e00447-26d0-4701-9875-c7ebb9ac0472"
+        "collapsed": true
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Unused kwargs: ['_load_in_4bit', '_load_in_8bit', 'quant_method']. These kwargs are not used in <class 'transformers.utils.quantization_config.BitsAndBytesConfig'>.\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Bilimsel bir область olan sistem mühendisi, sistemleri design, kurulum ve operasyonlailarara iletimi ve geliştirme processini takip etmede, teknoloji, enerji, komunikasyon gibi sektörlerde aktif olarak yer alar. Sistem mühendislerinin deurden alan her Bereichde problem-solving skillsi, bilgisayarlı simulationlar, modellerleme, sistematik analizler vb. teknikler kullanmaktedir.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from peft import AutoPeftModelForCausalLM\n",
         "from transformers import AutoTokenizer\n",
@@ -654,7 +703,7 @@
       "source": [
         "# Merge to 16bit\n",
         "if False: model.save_pretrained_merged(\"model\", tokenizer, save_method = \"merged_16bit\",)\n",
-        "if False: model.push_to_hub_merged(\"hf/model\", tokenizer, save_method = \"merged_16bit\", token = \"\")\n",
+        "if True: model.push_to_hub_merged(\"Meta-Llama-3.1-8B-Instruct_syseng_vllm_v1\", tokenizer, save_method = \"merged_16bit\", token = \"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\")\n",
         "\n",
         "# Merge to 4bit\n",
         "if False: model.save_pretrained_merged(\"model\", tokenizer, save_method = \"merged_4bit\",)\n",
@@ -664,109 +713,12 @@
         "if False: model.save_pretrained_merged(\"model\", tokenizer, save_method = \"lora\",)\n",
         "if False: model.push_to_hub_merged(\"hf/model\", tokenizer, save_method = \"lora\", token = \"\")"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "TCv4vXHd61i7"
-      },
-      "source": [
-        "### GGUF / llama.cpp Conversion\n",
-        "To save to `GGUF` / `llama.cpp`, we support it natively now! We clone `llama.cpp` and we default save it to `q8_0`. We allow all methods like `q4_k_m`. Use `save_pretrained_gguf` for local saving and `push_to_hub_gguf` for uploading to HF.\n",
-        "\n",
-        "Some supported quant methods (full list on our [Wiki page](https://github.com/unslothai/unsloth/wiki#gguf-quantization-options)):\n",
-        "* `q8_0` - Fast conversion. High resource use, but generally acceptable.\n",
-        "* `q4_k_m` - Recommended. Uses Q6_K for half of the attention.wv and feed_forward.w2 tensors, else Q4_K.\n",
-        "* `q5_k_m` - Recommended. Uses Q6_K for half of the attention.wv and feed_forward.w2 tensors, else Q5_K.\n",
-        "\n",
-        "[**NEW**] To finetune and auto export to Ollama, try our [Ollama notebook](https://colab.research.google.com/drive/1WZDi7APtQ9VsvOrQSSC5DDtxq159j8iZ?usp=sharing)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "FqfebeAdT073"
-      },
-      "outputs": [],
-      "source": [
-        "# Save to 8bit Q8_0\n",
-        "if False: model.save_pretrained_gguf(\"model\", tokenizer,)\n",
-        "# Remember to go to https://huggingface.co/settings/tokens for a token!\n",
-        "# And change hf to your username!\n",
-        "if False: model.push_to_hub_gguf(\"hf/model\", tokenizer, token = \"\")\n",
-        "\n",
-        "from huggingface_hub import create_repo, login\n",
-        "\n",
-        "# Hugging Face token ile giriş yapın\n",
-        "login(token=\"---\")\n",
-        "\n",
-        "# Repo'yu oluşturun (eğer mevcut değilse)\n",
-        "#create_repo(\"model\", repo_type=\"model\")\n",
-        "\n",
-        "# Save to 16bit GGUF\n",
-        "#if True: model.save_pretrained_gguf(\"model\", tokenizer, quantization_method = \"f16\")\n",
-        "if True: model.push_to_hub_gguf(\"model\", tokenizer, quantization_method = \"f16\", token = \"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\")\n",
-        "\n",
-        "# Save to q4_k_m GGUF\n",
-        "if False: model.save_pretrained_gguf(\"model\", tokenizer, quantization_method = \"q4_k_m\")\n",
-        "if False: model.push_to_hub_gguf(\"hf/model\", tokenizer, quantization_method = \"q4_k_m\", token = \"\")\n",
-        "\n",
-        "# Save to multiple GGUF options - much faster if you want multiple!\n",
-        "if False:\n",
-        "    model.push_to_hub_gguf(\n",
-        "        \"hf/model\", # Change hf to your username!\n",
-        "        tokenizer,\n",
-        "        quantization_method = [\"q4_k_m\", \"q8_0\", \"q5_k_m\",],\n",
-        "        token = \"\", # Get a token at https://huggingface.co/settings/tokens\n",
-        "    )"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "bDp0zNpwe6U_"
-      },
-      "source": [
-        "Now, use the `model-unsloth.gguf` file or `model-unsloth-Q4_K_M.gguf` file in `llama.cpp` or a UI based system like `GPT4All`. You can install GPT4All by going [here](https://gpt4all.io/index.html).\n",
-        "\n",
-        "**[NEW] Try 2x faster inference in a free Colab for Llama-3.1 8b Instruct [here](https://colab.research.google.com/drive/1T-YBVfnphoVc8E2E854qF3jdia2Ll2W2?usp=sharing)**"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Zt9CHJqO6p30"
-      },
-      "source": [
-        "And we're done! If you have any questions on Unsloth, we have a [Discord](https://discord.gg/u54VK8m8tk) channel! If you find any bugs or want to keep updated with the latest LLM stuff, or need help, join projects etc, feel free to join our Discord!\n",
-        "\n",
-        "Some other links:\n",
-        "1. Zephyr DPO 2x faster [free Colab](https://colab.research.google.com/drive/15vttTpzzVXv_tJwEk-hIcQ0S9FcEWvwP?usp=sharing)\n",
-        "2. Llama 7b 2x faster [free Colab](https://colab.research.google.com/drive/1lBzz5KeZJKXjvivbYvmGarix9Ao6Wxe5?usp=sharing)\n",
-        "3. TinyLlama 4x faster full Alpaca 52K in 1 hour [free Colab](https://colab.research.google.com/drive/1AZghoNBQaMDgWJpi4RbffGM1h6raLUj9?usp=sharing)\n",
-        "4. CodeLlama 34b 2x faster [A100 on Colab](https://colab.research.google.com/drive/1y7A0AxE3y8gdj4AVkl2aZX47Xu3P1wJT?usp=sharing)\n",
-        "5. Mistral 7b [free Kaggle version](https://www.kaggle.com/code/danielhanchen/kaggle-mistral-7b-unsloth-notebook)\n",
-        "6. We also did a [blog](https://huggingface.co/blog/unsloth-trl) with 🤗 HuggingFace, and we're in the TRL [docs](https://huggingface.co/docs/trl/main/en/sft_trainer#accelerate-fine-tuning-2x-using-unsloth)!\n",
-        "7. `ChatML` for ShareGPT datasets, [conversational notebook](https://colab.research.google.com/drive/1Aau3lgPzeZKQ-98h69CCu1UJcvIBLmy2?usp=sharing)\n",
-        "8. Text completions like novel writing [notebook](https://colab.research.google.com/drive/1ef-tab5bhkvWmBOObepl1WgJvfvSzn5Q?usp=sharing)\n",
-        "9. [**NEW**] We make Phi-3 Medium / Mini **2x faster**! See our [Phi-3 Medium notebook](https://colab.research.google.com/drive/1hhdhBa1j_hsymiW9m-WzxQtgqTH_NHqi?usp=sharing)\n",
-        "10. [**NEW**] We make Gemma-2 9b / 27b **2x faster**! See our [Gemma-2 9b notebook](https://colab.research.google.com/drive/1vIrqH5uYDQwsJ4-OO3DErvuv4pBgVwk4?usp=sharing)\n",
-        "11. [**NEW**] To finetune and auto export to Ollama, try our [Ollama notebook](https://colab.research.google.com/drive/1WZDi7APtQ9VsvOrQSSC5DDtxq159j8iZ?usp=sharing)\n",
-        "12. [**NEW**] We make Mistral NeMo 12B 2x faster and fit in under 12GB of VRAM! [Mistral NeMo notebook](https://colab.research.google.com/drive/17d3U-CAIwzmbDRqbZ9NnpHxCkmXB6LZ0?usp=sharing)\n",
-        "\n",
-        "<div class=\"align-center\">\n",
-        "  <a href=\"https://github.com/unslothai/unsloth\"><img src=\"https://github.com/unslothai/unsloth/raw/main/images/unsloth%20new%20logo.png\" width=\"115\"></a>\n",
-        "  <a href=\"https://discord.gg/u54VK8m8tk\"><img src=\"https://github.com/unslothai/unsloth/raw/main/images/Discord.png\" width=\"145\"></a>\n",
-        "  <a href=\"https://ko-fi.com/unsloth\"><img src=\"https://github.com/unslothai/unsloth/raw/main/images/Kofi button.png\" width=\"145\"></a></a> Support our work if you can! Thanks!\n",
-        "</div>"
-      ]
     }
   ],
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "gpuType": "T4",
+      "gpuType": "A100",
       "provenance": [],
       "include_colab_link": true
     },
