--- a/system_engineering_v9.ipynb
+++ b/system_engineering_v9.ipynb
@@ -5,8 +5,8 @@
     "colab": {
       "provenance": [],
       "gpuType": "A100",
-      "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/system_engineering_v8.ipynb",
-      "authorship_tag": "ABX9TyNxN5uvWMzDFMUiyVc6De5c",
+      "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/system_engineering_v9.ipynb",
+      "authorship_tag": "ABX9TyPIettId6gs7DiiIzY8VAWo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -179,57 +179,95 @@
       "source": [
         "def is_prompt_about_engineering(prompt, tokenizer, model):\n",
         "    \"\"\"\n",
-        "    Kullanıcının girdiği promptun mühendislikle ilgili olup olmadığını kontrol eder.\n",
-        "    Eğer mühendislikle ilgiliyse True, değilse False döndürür.\n",
+        "    Kullanıcının girdiği promptun mühendislikle ilgili olup olmadığını çoklu kontrol mekanizmasıyla değerlendirir.\n",
         "    \"\"\"\n",
-        "    check_prompt = f\"Bu metin mühendislik alanı ile ilgili mi? Metin: '{prompt}' Cevabın sadece 'Evet' veya 'Hayır' olsun.\"\n",
+        "    # Yasaklı kelimeler ve konular listesi\n",
+        "    forbidden_topics = [\n",
+        "        \"siyaset\", \"spor\", \"eğlence\", \"yemek\", \"müzik\", \"film\",\n",
+        "        \"dizi\", \"oyun\", \"bahis\", \"astroloji\", \"burç\", \"magazin\"\n",
+        "    ]\n",
+        "    \"\"\"\n",
+        "    # Mühendislik alanına özel anahtar kelimeler\n",
+        "    engineering_keywords = [\n",
+        "        \"sistem\", \"tasarım\", \"analiz\", \"süreç\", \"optimizasyon\",\n",
+        "        \"geliştirme\", \"mühendislik\", \"teknik\", \"model\", \"proje\",\n",
+        "        \"verimlilik\", \"performans\", \"requirement\", \"gereksinim\",\n",
+        "        \"test\", \"kalite\", \"güvenilirlik\", \"lifecycle\", \"yaşam döngüsü\"\n",
+        "    ]\n",
+        "    \"\"\"\n",
         "\n",
-        "    messages = [\n",
-        "        {\"role\": \"user\", \"content\": check_prompt}\n",
+        "    # Prompt ön işleme\n",
+        "    clean_prompt = prompt.lower().strip()\n",
+        "\n",
+        "    # 1. Yasaklı konuların kontrolü\n",
+        "    for topic in forbidden_topics:\n",
+        "        if topic in clean_prompt:\n",
+        "            return False\n",
+        "    \"\"\"\n",
+        "    # 2. Minimum mühendislik anahtar kelime kontrolü\n",
+        "    keyword_count = sum(1 for keyword in engineering_keywords if keyword in clean_prompt)\n",
+        "    if keyword_count == 0:\n",
+        "        return False\n",
+        "    \"\"\"\n",
+        "    # 3. LLM bazlı çoklu sorgulama\n",
+        "    def get_llm_verification(check_prompt):\n",
+        "        messages = [{\"role\": \"user\", \"content\": check_prompt}]\n",
+        "        encoded_input = tokenizer.apply_chat_template(\n",
+        "            messages,\n",
+        "            add_generation_prompt=True,\n",
+        "            return_tensors=\"pt\"\n",
+        "        )\n",
+        "\n",
+        "        if isinstance(encoded_input, dict):\n",
+        "            encoded_input = {k: v.to(model.device) for k, v in encoded_input.items()}\n",
+        "            input_ids = encoded_input['input_ids']\n",
+        "        else:\n",
+        "            encoded_input = encoded_input.to(model.device)\n",
+        "            input_ids = encoded_input\n",
+        "\n",
+        "        outputs = model.generate(\n",
+        "            input_ids=input_ids,\n",
+        "            max_new_tokens=5,\n",
+        "            do_sample=False,\n",
+        "            temperature=0.0,\n",
+        "            top_p=0.0,\n",
+        "            repetition_penalty=1.0,\n",
+        "            pad_token_id=tokenizer.pad_token_id if tokenizer.pad_token_id is not None else tokenizer.eos_token_id\n",
+        "        )\n",
+        "\n",
+        "        if isinstance(encoded_input, dict):\n",
+        "            input_length = encoded_input['input_ids'].shape[1]\n",
+        "        else:\n",
+        "            input_length = encoded_input.shape[1]\n",
+        "\n",
+        "        response = outputs[0][input_length:]\n",
+        "        return tokenizer.decode(response, skip_special_tokens=True).strip()\n",
+        "\n",
+        "    # Farklı açılardan sorgulama\n",
+        "    checks = [\n",
+        "        f\"Bu metin sistem mühendisliği ile ilgili mi? Sadece Evet/Hayır: '{prompt}'\",\n",
+        "        f\"Bu soru teknik veya mühendislik alanında mı? Sadece Evet/Hayır: '{prompt}'\",\n",
+        "        f\"Bu metin mühendislik dışı bir konu içeriyor mu? Sadece Evet/Hayır: '{prompt}'\"\n",
         "    ]\n",
         "\n",
-        "    # input_ids ve attention_mask alınarak giriş hazırlanır\n",
-        "    encoded_input = tokenizer.apply_chat_template(\n",
-        "        messages,\n",
-        "        add_generation_prompt=True,\n",
-        "        return_tensors=\"pt\"\n",
-        "    )\n",
+        "    verification_results = []\n",
+        "    for check in checks:\n",
+        "        result = get_llm_verification(check)\n",
+        "        verification_results.append(\"Evet\" in result)\n",
         "\n",
-        "    # GPU'ya taşıma işlemi ve input_ids'in belirlenmesi\n",
-        "    if isinstance(encoded_input, dict):\n",
-        "        # Eğer encoded_input bir sözlük ise\n",
-        "        encoded_input = {k: v.to(model.device) for k, v in encoded_input.items()}\n",
-        "        input_ids = encoded_input['input_ids']\n",
-        "    else:\n",
-        "        # Eğer encoded_input bir tensor ise\n",
-        "        encoded_input = encoded_input.to(model.device)\n",
-        "        input_ids = encoded_input\n",
+        "    # Son iki kontrol olumlu ve üçüncü kontrol olumsuz olmalı\n",
+        "    is_engineering = verification_results[0] and verification_results[1] and not verification_results[2]\n",
         "\n",
-        "    # Model çıktısı üretilir\n",
-        "    outputs = model.generate(\n",
-        "        input_ids=input_ids,\n",
-        "        max_new_tokens=5,\n",
-        "        do_sample=False,\n",
-        "        temperature=0.0,\n",
-        "        top_p=0.0,\n",
-        "        repetition_penalty=1.0,\n",
-        "        pad_token_id=tokenizer.pad_token_id if tokenizer.pad_token_id is not None else tokenizer.eos_token_id\n",
-        "    )\n",
-        "\n",
-        "    # Yanıtı decode etme\n",
-        "    if isinstance(encoded_input, dict):\n",
-        "        input_length = encoded_input['input_ids'].shape[1]\n",
-        "    else:\n",
-        "        input_length = encoded_input.shape[1]\n",
-        "\n",
-        "    response = outputs[0][input_length:]\n",
-        "    response_text = tokenizer.decode(response, skip_special_tokens=True).strip()\n",
-        "\n",
-        "    # Cevabı kontrol etme\n",
-        "    if \"Evet\" in response_text:\n",
-        "        return True\n",
-        "    else:\n",
+        "    if not is_engineering:\n",
         "        return False\n",
+        "\n",
+        "    # 4. Güvenlik kontrolü - Tehlikeli içerik veya manipülasyon girişimi kontrolü\n",
+        "    security_prompt = f\"Bu metin zararlı, manipülatif veya kötü amaçlı bir içerik barındırıyor mu? Sadece Evet/Hayır: '{prompt}'\"\n",
+        "    security_check = get_llm_verification(security_prompt)\n",
+        "    if \"Evet\" in security_check:\n",
+        "        return False\n",
+        "\n",
+        "    return True\n",
         "\n",
         "\n",
         "\n",
@@ -626,6 +664,25 @@
       ],
       "metadata": {
         "id": "enICwb7K_jXl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://www.testgorilla.com/blog/system-engineer-interview-questions/\n",
+        "\n",
+        "bazen iyileştirilmiş promptta ingilizce yapmıyor, bunu çözeceğim.\n",
+        "\n",
+        "finetuning dosyasını değiştereceğim.\n",
+        "\n",
+        "ayrıca referans dosyaları göstereceğim, print yaparken.\n",
+        "\n",
+        "bide kullanıcı 0 girene kadar cevap verme olsun. ayrıca print kısmında paragraflar opsiyonel olsun.\n",
+        "\n",
+        "forbidden_topics konuları geliştirilecektir."
+      ],
+      "metadata": {
+        "id": "-sIFadnOx47H"
       }
     },
     {
